新闻详情评论数字设置0

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleNews/SkyBallHetiRedNewsDetail.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleNews/SkyBallHetiRedNewsDetail.storyboard
@@ -94,7 +94,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bqw-St-MRp" customClass="JXView">
                                                 <rect key="frame" x="25" y="15" width="14" height="14"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L30-lv-H0V">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L30-lv-H0V">
                                                         <rect key="frame" x="3.5" y="0.0" width="7" height="14"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
@@ -204,7 +204,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ith-XW-urm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-156" y="131.78410794602701"/>
+            <point key="canvasLocation" x="-156.52173913043478" y="131.25"/>
         </scene>
     </scenes>
     <resources>
